# napari-vidanno

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
napari-vidanno/src/vidanno/: _widget.py
src/vidanno/: __init__.py  _version.py  _widget.py  napari.yaml  vidanno_gui.py  vidanno_gui.ui
src/vidanno/_tests/: test_widget.py
